--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ packages = [{include = "dumpulator", from = "src"}, {include = "minidump", from 
 python = "^3.9"
 unicorn = "^2.1.3"
 pefile = ">=2021.9.3"
-capstone = "~4.0.2"
+capstone = "^5.0.6"
 setuptools = "^80.9.0"
 
 [tool.poetry.group.dev.dependencies]
