--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ packages = [{include = "dumpulator", from = "src"}, {include = "minidump", from 
 
 [tool.poetry.dependencies]
 python = "^3.9"
-unicorn = "^2.1.3"
+unicorn = "2.0.1.post1"
 pefile = ">=2021.9.3"
 capstone = "^5.0.6"
 setuptools = "^80.9.0"
