--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,30 @@
-[tool.poetry]
+[project]
 name = "dumpulator"
 version = "1.0.0"
 description = "An easy-to-use library for emulating code in minidump files."
-authors = ["Duncan Ogilvie <dumpulator@mrexodia.re>"]
+authors = [{name = "Duncan Ogilvie", email = "dumpulator@mrexodia.re"}]
 readme = "README.md"
-homepage = "https://github.com/mrexodia/dumpulator"
-repository = "https://github.com/mrexodia/dumpulator"
-license = "BSL-1.0"
-packages = [{include = "dumpulator", from = "src"}, {include = "minidump", from = "src"}]
+license = {text = "BSL-1.0"}
+requires-python = ">=3.9"
+dependencies = [
+    "unicorn==2.0.1.post1",
+    "pefile>=2021.9.3",
+    "capstone>=5.0.6",
+    "setuptools<79.0.0",
+]
 
-[tool.poetry.dependencies]
-python = "^3.9"
-unicorn = "2.0.1.post1"
-pefile = ">=2021.9.3"
-capstone = "^5.0.6"
-setuptools = "^78.1.1"
+[project.urls]
+Homepage = "https://github.com/mrexodia/dumpulator"
+Repository = "https://github.com/mrexodia/dumpulator"
 
-[tool.poetry.group.dev.dependencies]
-libclang = "~15.0.0"
+[project.optional-dependencies]
+dev = [
+    "libclang~=15.0.0",
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/dumpulator", "src/minidump"]
