--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pefile>=2021.9.3",
     "capstone>=5.0.6",
     "setuptools<79.0.0",
+    "typer>=0.16.0",
 ]
 
 [project.optional-dependencies]
