--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,6 @@ dependencies = [
     "pefile>=2021.9.3",
     "capstone>=5.0.6",
     "setuptools<79.0.0",
-    "typer>=0.16.0",
-    "sh>=2.2.2",
 ]
 
 [project.optional-dependencies]
@@ -26,3 +24,9 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/dumpulator", "src/minidump"]
+
+[dependency-groups]
+dev = [
+    "sh>=2.2.2",
+    "typer>=0.16.0",
+]
