reorg optional deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,11 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    "libclang~=15.0.0",
+    "sh>=2.2.2",
+    "typer>=0.16.0",
+]
+libclang = [
+    "libclang>=18.1.1",
 ]
 
 [build-system]
@@ -26,7 +30,7 @@ build-backend = "hatchling.build"
 packages = ["src/dumpulator", "src/minidump"]
 
 [dependency-groups]
-dev = [
+shell = [
     "sh>=2.2.2",
     "typer>=0.16.0",
 ]
